--- a/index.html
+++ b/index.html
@@ -3,63 +3,103 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JSON Form</title>
+    <title>Poker Game Reservations</title>
+    <style>
+        #app, #error { display: none; }
+        .hidden { display: none; }
+    </style>
 </head>
 <body>
-    <h1>Update Data</h1>
-    <form id="dataForm">
-        <label for="dataInput">Enter some text:</label>
-        <input type="text" id="dataInput" name="data" value="" />
-        <button type="submit">Submit</button>
-    </form>
+    <h1>Poker Game Reservations</h1>
+
+    <!-- Password Form -->
+    <div id="passwordForm">
+        <label for="passwordInput">Enter Password:</label>
+        <input type="password" id="passwordInput">
+        <button id="submitPassword">Submit</button>
+        <p id="error" style="color:red;">Incorrect password. Try again.</p>
+    </div>
+
+    <!-- Main App -->
+    <div id="app">
+        <h2>Date: <span id="gameDate"></span></h2>
+
+        <!-- Venue Availability -->
+        <h3>Is the venue available?</h3>
+        <label>
+            <input type="radio" name="venue" value="yes"> Yes
+        </label>
+        <label>
+            <input type="radio" name="venue" value="no"> No
+        </label>
+        <label>
+            <input type="radio" name="venue" value="unknown" checked> Unknown
+        </label>
+
+        <!-- Attendee List -->
+        <h3>Attendees</h3>
+        <div id="attendeeList">
+            <!-- Ten attendees -->
+            <h4>Main Attendees</h4>
+            <div id="mainAttendees">
+                <div><label>Attendee 1: <input type="text" class="attendee"></label></div>
+                <div><label>Attendee 2: <input type="text" class="attendee"></label></div>
+                <div><label>Attendee 3: <input type="text" class="attendee"></label></div>
+                <div><label>Attendee 4: <input type="text" class="attendee"></label></div>
+                <div><label>Attendee 5: <input type="text" class="attendee"></label></div>
+                <div><label>Attendee 6: <input type="text" class="attendee"></label></div>
+                <div><label>Attendee 7: <input type="text" class="attendee"></label></div>
+                <div><label>Attendee 8: <input type="text" class="attendee"></label></div>
+                <div><label>Attendee 9: <input type="text" class="attendee"></label></div>
+                <div><label>Attendee 10: <input type="text" class="attendee"></label></div>
+            </div>
+
+            <!-- Two alternates -->
+            <h4>Alternates</h4>
+            <div id="alternates">
+                <div><label>Alternate 1: <input type="text" class="attendee"></label></div>
+                <div><label>Alternate 2: <input type="text" class="attendee"></label></div>
+            </div>
+        </div>
+    </div>
 
     <script>
-        const accessKey = '$2a$10$n2R7cE.TDZUvv3pHSw0tb.SnA2rQat9H2ol3QMcOFOPn2WAKUXSRa';
-        const binId = '66f1b7d0acd3cb34a889ea39';
+        // Dummy password for the example
+        const correctPassword = "poker123";
 
-        // Fetch the existing JSON data and populate the form
-        async function fetchData() {
-            try {
-                const response = await fetch(`https://api.jsonbin.io/v3/b/${binId}/latest`, {
-                    headers: {
-                        'X-Access-Key': accessKey
-                    }
-                });
-                const result = await response.json();
-                const data = result.record.data;
-                document.getElementById('dataInput').value = data || '';
-            } catch (error) {
-                console.error('Error fetching JSON:', error);
-            }
-        }
+        document.getElementById('submitPassword').addEventListener('click', function() {
+            const inputPassword = document.getElementById('passwordInput').value;
 
-        // On form submit, update the JSON data with the new input
-        document.getElementById('dataForm').addEventListener('submit', async function(event) {
-            event.preventDefault();
-            const inputValue = document.getElementById('dataInput').value;
-
-            try {
-                const response = await fetch(`https://api.jsonbin.io/v3/b/${binId}`, {
-                    method: 'PUT',
-                    headers: {
-                        'Content-Type': 'application/json',
-                        'X-Access-Key': accessKey
-                    },
-                    body: JSON.stringify({ data: inputValue })
-                });
-
-                if (response.ok) {
-                    alert('Data updated successfully!');
-                } else {
-                    alert('Failed to update data');
-                }
-            } catch (error) {
-                console.error('Error updating JSON:', error);
+            // Check if password is correct
+            if (inputPassword === correctPassword) {
+                document.getElementById('passwordForm').style.display = 'none';
+                document.getElementById('app').style.display = 'block';
+                calculateNextMonday();
+            } else {
+                document.getElementById('error').style.display = 'block';
             }
         });
 
-        // Load the current data when the page loads
-        fetchData();
+        // Function to calculate the next Monday's date
+        function calculateNextMonday() {
+            const today = new Date();
+            let dayOfWeek = today.getDay();
+            let daysUntilMonday = (1 - dayOfWeek + 7) % 7;
+
+            if (daysUntilMonday === 0) {
+                daysUntilMonday = 0;  // It's Monday today
+            }
+
+            const nextMonday = new Date(today);
+            nextMonday.setDate(today.getDate() + daysUntilMonday);
+
+            // Format the date
+            const options = { year: 'numeric', month: 'long', day: 'numeric' };
+            const formattedDate = nextMonday.toLocaleDateString(undefined, options);
+
+            // Display the calculated date
+            document.getElementById('gameDate').textContent = formattedDate;
+        }
     </script>
 </body>
 </html>
