--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Password Form -->
     <div id="passwordForm">
         <input type="password" id="passwordInput" placeholder="">
-        <button id="submitPassword">Submit</button>
+        <button id="submitPassword">Enter</button>
         <p id="error" style="color:red;">Incorrect password. Try again.</p>
     </div>
 
@@ -23,13 +23,14 @@
         <h2>Date: <span id="gameDate"></span></h2>
 
         <!-- Venue Availability -->
+        <h4>Venue is available:</h4>
         <div>
             <label>
                 <input type="radio" name="venue" value="yes"> Yes
-            </label>
+            </label><br>
             <label>
                 <input type="radio" name="venue" value="no"> No
-            </label>
+            </label><br>
             <label>
                 <input type="radio" name="venue" value="unknown" checked> Unknown
             </label>
@@ -50,30 +51,54 @@
             <div><label>Player 10: <input type="text" class="player"></label></div>
         </div>
 
-        <!-- Alternates -->
-        <h4>Alternates</h4>
+        <!-- Alternates/Maybes -->
+        <h4>Alternates/Maybes</h4>
         <div id="alternates">
             <div><label>Alternate 1: <input type="text" class="player"></label></div>
             <div><label>Alternate 2: <input type="text" class="player"></label></div>
+            <div><label>Alternate 3: <input type="text" class="player"></label></div>
+            <div><label>Alternate 4: <input type="text" class="player"></label></div>
         </div>
+
+        <!-- Submit Button -->
+        <button id="submitChanges">Submit Changes</button>
+
+        <p id="collisionMessage" style="color:red; display:none;">Sorry, someone else made a change while you were typing. Please try again.</p>
     </div>
 
     <script>
-        // Dummy password for the example
-        const correctPassword = "poker123";
+        const apiKey = '$2a$10$n2R7cE.TDZUvv3pHSw0tb.SnA2rQat9H2ol3QMcOFOPn2WAKUXSRa';
+        const binId = '66f1b7d0acd3cb34a889ea39';
+        let lastModifiedTimestamp;
 
-        document.getElementById('submitPassword').addEventListener('click', function() {
-            const inputPassword = document.getElementById('passwordInput').value;
+        // Fetch the password from JSON and check user input
+        async function fetchPasswordAndAuthenticate() {
+            try {
+                const response = await fetch(`https://api.jsonbin.io/v3/b/${binId}/latest`, {
+                    headers: {
+                        'X-Access-Key': apiKey
+                    }
+                });
+                const result = await response.json();
+                const storedPassword = result.record.password;
+                lastModifiedTimestamp = result.metadata.modifiedAt;  // Keep track of when the JSON was last modified
 
-            // Check if password is correct
-            if (inputPassword === correctPassword) {
-                document.getElementById('passwordForm').style.display = 'none';
-                document.getElementById('app').style.display = 'block';
-                calculateNextMonday();
-            } else {
-                document.getElementById('error').style.display = 'block';
+                const inputPassword = document.getElementById('passwordInput').value;
+
+                // Check if the password matches
+                if (inputPassword === storedPassword) {
+                    document.getElementById('passwordForm').style.display = 'none';
+                    document.getElementById('app').style.display = 'block';
+                    calculateNextMonday();
+                } else {
+                    document.getElementById('error').style.display = 'block';
+                }
+            } catch (error) {
+                console.error('Error fetching JSON:', error);
             }
-        });
+        }
+
+        document.getElementById('submitPassword').addEventListener('click', fetchPasswordAndAuthenticate);
 
         // Function to calculate the next Monday's date
         function calculateNextMonday() {
@@ -95,6 +120,50 @@
             // Display the calculated date
             document.getElementById('gameDate').textContent = formattedDate;
         }
+
+        // Submit form data and detect collisions
+        async function submitFormData() {
+            try {
+                // Check for collision by re-fetching the JSON and comparing timestamps
+                const response = await fetch(`https://api.jsonbin.io/v3/b/${binId}/latest`, {
+                    headers: {
+                        'X-Access-Key': apiKey
+                    }
+                });
+                const result = await response.json();
+                const currentModifiedTimestamp = result.metadata.modifiedAt;
+
+                // If the timestamps differ, someone else has made a change
+                if (currentModifiedTimestamp !== lastModifiedTimestamp) {
+                    document.getElementById('collisionMessage').style.display = 'block';
+                    return;  // Stop submission
+                }
+
+                // If no collision, update the data
+                const formData = {
+                    venue: document.querySelector('input[name="venue"]:checked').value,
+                    players: Array.from(document.querySelectorAll('#mainPlayers input')).map(input => input.value),
+                    alternates: Array.from(document.querySelectorAll('#alternates input')).map(input => input.value),
+                    password: result.record.password  // Keep the password as-is
+                };
+
+                await fetch(`https://api.jsonbin.io/v3/b/${binId}`, {
+                    method: 'PUT',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'X-Access-Key': apiKey
+                    },
+                    body: JSON.stringify(formData)
+                });
+
+                alert('Changes submitted successfully!');
+
+            } catch (error) {
+                console.error('Error submitting JSON:', error);
+            }
+        }
+
+        document.getElementById('submitChanges').addEventListener('click', submitFormData);
     </script>
 </body>
 </html>
