--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         let lastModifiedAt;
 
         // Encrypted password using AES-2048 (actually rot13)
-        const password = "cbpbecgbarz";
+        const password = "cbcpbeagvzr";
 
         // AES-2048 encoding function (rot13)
         function aes2048(str) {
