--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Let’s Play Poker</title>
     <style>
-        #app, #error { display: none; }
+        #app, #error, #success { display: none; }
         .hidden { display: none; }
+        #success {
+            color: green;
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
@@ -60,9 +64,9 @@
             <div><label>Alternate 4: <input type="text" class="player"></label></div>
         </div>
 
-        <!-- Save Button -->
+        <!-- Save Button and Success Message -->
         <button id="submitChanges">Save</button>
-
+        <p id="success">Saved your update, thank you :-)</p>
         <p id="collisionMessage" style="color:red; display:none;">Sorry, someone else made a change while you were typing. Please reload the page and try again.</p>
     </div>
 
@@ -183,6 +187,9 @@
         // Submit form data and update the modifiedAt timestamp in the JSON
         async function submitFormData() {
             try {
+                // Hide success message initially
+                document.getElementById('success').style.display = 'none';
+
                 // Re-fetch the JSON to check for modifications
                 const response = await fetch(`https://api.jsonbin.io/v3/b/${binId}/latest`, {
                     headers: {
@@ -205,16 +212,16 @@
                 const formData = {
                     date: calculateNextMonday(),
                     modifiedAt: new Date().toISOString(),  // Update the modifiedAt field with the current time
-                    venue: document.querySelector('input[name="venue"]:checked').value,
+                    venue: document.querySelector('input
+
+[name="venue"]:checked').value,
                     players: Array.from(document.querySelectorAll('#mainPlayers input')).map(input => input.value),
                     alternates: Array.from(document.querySelectorAll('#alternates input')).map(input => input.value)
                 };
 
                 console.log("Submitting form data:", formData);
 
-                await fetch(`https://api.jsonbin.io/v
-
-3/b/${binId}`, {
+                await fetch(`https://api.jsonbin.io/v3/b/${binId}`, {
                     method: 'PUT',
                     headers: {
                         'Content-Type': 'application/json',
@@ -223,7 +230,8 @@
                     body: JSON.stringify(formData)
                 });
 
-                alert('Saved your update, thank you :-)');
+                // Show success message
+                document.getElementById('success').style.display = 'block';
 
             } catch (error) {
                 console.error('Error submitting JSON:', error);
